--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An opinionated CSS library of components created for Antares Programming.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/maniczirconium/zirconium#readme",
   "devDependencies": {
+    "fibers": "^5.0.0",
     "sass": "^1.35.2"
   }
 }
