🔨 Added serve script

--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "zirconium",
-  "version": "1.0.0",
-  "description": "An opinionated CSS library of components created for Antares Programming.",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maniczirconium/zirconium.git"
-  },
-  "author": "Francis Rubio <devFrancisRubio@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/maniczirconium/zirconium/issues"
-  },
-  "homepage": "https://github.com/maniczirconium/zirconium#readme",
-  "devDependencies": {
-    "fibers": "^5.0.0",
-    "sass": "^1.35.2"
-  }
+	"name": "zirconium",
+	"version": "1.0.0",
+	"description": "An opinionated CSS library of components created for Antares Programming.",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"serve": "node node_modules/.bin/http-server "
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/maniczirconium/zirconium.git"
+	},
+	"author": "Francis Rubio <devFrancisRubio@gmail.com>",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/maniczirconium/zirconium/issues"
+	},
+	"homepage": "https://github.com/maniczirconium/zirconium#readme",
+	"devDependencies": {
+		"chalk": "^4.1.1",
+		"fibers": "^5.0.0",
+		"http-server": "^0.12.3",
+		"sass": "^1.35.2"
+	}
 }
