--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -129,3 +128,5 @@ dist
 *.scss.map
 
 # End of https://www.toptal.com/developers/gitignore/api/node,sass
+
+public/
