--- a/docs/_config-dev.yml
+++ b/docs/_config-dev.yml
@@ -22,8 +22,8 @@ title: Zirconium by Antares Programming
 email: devFrancisRubio@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   An opinionated CSS library of components used in Antares Programming
-# baseurl: "" # the subpath of your site, e.g. /blog
-baseurl: "https://antaresprogramming.github.io/zirconium/" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+#url: "https://antaresprogramming.github.io/zirconium/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: antaresphdev
 github_username:  antaresprogramming
 
