--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "node index.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"serve": "node node_modules/.bin/http-server docs/"
+		"serve": "cd docs && bundle exec jekyll serve --config _config-dev.yml"
 	},
 	"repository": {
 		"type": "git",
