--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   An opinionated CSS library of components used in Antares Programming
 # baseurl: "" # the subpath of your site, e.g. /blog
 baseurl: "/zirconium" # the base hostname & protocol for your site, e.g. http://example.com
-url: "https://antaresprogramming.github.io/"
+url: "https://antaresprogramming.github.io"
 twitter_username: antaresphdev
 github_username:  antaresprogramming
 
