--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 	"homepage": "https://github.com/antaresprogramming/zirconium#readme",
 	"devDependencies": {
 		"chalk": "^4.1.1",
-		"fibers": "^5.0.0",
 		"http-server": "^0.12.3",
 		"sass": "^1.35.2"
+	},
+	"dependencies": {
+		"fibers": "^5.0.0"
 	}
 }
