--- a/docs/_config-dev.yml
+++ b/docs/_config-dev.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Zirconium by Antares Programming
-email: devFrancisRubio@gmail.com
+email: 67542653+maniczirconium@users.noreply.github.com
 description: >- # this means to ignore newlines until "baseurl:"
   An opinionated CSS library of components used in Antares Programming
 baseurl: "/" # the subpath of your site, e.g. /blog
