--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.35.2"
   },
   "dependencies": {
-    "fibers": "^5.0.0"
+    "fibers": "^5.0.0",
+    "sassdoc": "^2.7.3"
   }
 }
