--- a/docs/_config-dev.yml
+++ b/docs/_config-dev.yml
@@ -27,6 +27,8 @@ url: "http://localhost:4000" # the base hostname & protocol for your site, e.g. 
 twitter_username: antaresphdev
 github_username:  antaresprogramming
 
+cover: zirconium.png
+
 authors:
   teacherbuknoy:
     name: Francis Rubio
