--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,7 +26,9 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/zirconium" # the base hostname & protocol for your site, e.g. http://example.com
 url: "https://antaresprogramming.github.io"
 twitter_username: antaresphdev
-github_username:  antar
+github_username:  antaresphdev
+
+cover: zirconium.png
 
 authors:
   teacherbuknoy:
