--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "fibers": "^5.0.0",
-    "globby": "^12.0.2",
+    "glob": "^7.1.7",
     "sassdoc": "^2.7.3"
   }
 }
